[package]
name = "oled_shmoled"
version = "0.1.3"
authors = ["Nick Webster <nick@nick.geek.nz>"]
description = "OLED displays don't have backlights but it'd be nice if we could pretend they do on Linux!"
readme = "README.md"
homepage = "https://github.com/NickGeek/oled-shmoled"
repository = "https://github.com/NickGeek/oled-shmoled.git"
license = "GPL-3.0"
edition = "2018"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "^4.0.15"
clap = "3.0.0-beta.2"
anyhow = "1.0.35"

[profile.release]
opt-level = 3
lto = true
